# aoc2021-haskell

./: .gitignore  CHANGELOG.md  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day14.prof  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  README.md  aoc2021-haskell.cabal  exerciseDay10.md  exerciseDay2.md  exerciseDay3.md  exerciseDay4.md  exerciseDay6.md  exerciseDay7.md  exerciseDay8.md  exerciseDay9.md  profile.sh  testInput
challenges-in-md/: exerciseDay1.md  exerciseDay3.md  exerciseDay5.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
execs/: Day10.hs  Day11.hs  Day12.hs  Day14.hs  Day1SecondTry.hs  Day2.hs  Day5SecondTry.hs  Day7.hs  Day9.hs  DayTemplate.hs
inputs/: inputDay7
