cabal-version:      2.4
name:               aoc2021-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             git@pierrefhapp.dev
maintainer:         git@pierrefhapp.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

-- defining stub which can be reused for different executables or libraries.
-- learning from this aoc repo:
-- https://github.com/glguy/advent2021/blob/main/advent2021.cabal
common day
  hs-source-dirs:      execs
  build-depends:       base
  default-language:    Haskell2010

executable Day14
    import: day
    main-is: Day14.hs
    build-depends: containers, split
